[package]
name = "psx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
iset = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
pretty_logger = "0.1.8"
remove = "0.1.3"
simple_logger = { version = "4.0.0", features = ["timestamps"] }

