[package]
name = "psx-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
byte-unit = { version = "4.0.19", default-features = false }
clap = "4.4.6"
#iset = "0.1.1"
lazy_static = "1.4.0"
#log = "0.4.17"
#pretty_env_logger = "0.4.0"
sdl2 = "0.35.2"
time = { version = "0.3.30", features = ["formatting", "macros", "local-offset"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }
